# nextbike_rides_viewer

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: build.yml  rust.yml
src/: api.rs  input.rs  logging.rs  main.rs  offline.rs  processor.rs  rides.rs  stations.rs
viewer/: index.html  package-lock.json  package.json  vite.config.js
viewer/src/: App.svelte  Datetime.svelte  app.css
