[package]
name = "nextbike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.82"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["blocking", "native-tls-vendored"] }
regex = "1.6.0"
env_logger = "0.9.0"
log = "0.4.17"
clap = { version = "3.2.16", features = ["derive"] }
indicatif = "0.17.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
memmap = "0.7.0"
